--- a/site.css
+++ b/site.css
@@ -1,5 +1,6 @@
 body, button {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: fantasy;
 }
 
 button {
@@ -17,8 +18,9 @@ button {
   width: 400px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  background-color: black;
-  margin: 32px 0;
+  background-color: rgb(255, 238, 0);
+  margin: 35px 0;
+  position: relative;
 }
 
 .actions {
@@ -28,11 +30,13 @@ button {
 .announcement {
   font-size: 3em;
   text-align: center;
+  color: rgb(218, 123, 0);
 }
 
 .sub-announcement {
   font-size: 2em;
   text-align: center;
+  color: rgb(218, 123, 0);
 }
 
 .col-1 {
@@ -67,4 +71,21 @@ button {
   background-color: white;
   height: 130px;
   width: 130px;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.centered-pic {
+  height: 125px;
+  width: 125px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
